# setu-cli

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: checker.rs  lib.rs  main.rs  parser.rs
src/checker/: invalid.rs  remote.rs
src/parser/: classifier.rs  parsing.rs
tests/: parser_test.rs  test.md
