[package]
name = "setu-cli"
version = "0.1.2"
edition = "2024"
description = "A quick markdown link checker"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tom-devv/Setu"
keywords = ["markdown", "links", "cli", "async"]
categories = ["command-line-utilities"]

[dependencies]
futures = "0.3.32"
pulldown-cmark = "0.13.3"
reqwest = "0.13.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
